--- a/annotation-apt/build.gradle
+++ b/annotation-apt/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     annotationProcessor 'com.google.auto.service:auto-service:1.0'
     implementation 'com.squareup:javapoet:1.13.0'
 
+    implementation 'org.apache.commons:commons-lang3:3.6'
+
+
+
 
 }
 
